...
                      child: const Text('Update'),
                      onPressed: () async {
                        await userCommand.updateUser(name: nameController.text);
                      },
                    ),
                    ElevatedButton(
                      child: const Text('Delete'),
                      onPressed: () async {
                        context.goNamed(SignUpScreen.routeName);
                        await userCommand.deleteUser();
                      },
                    ),
                  ],
...
